# archivey-dev

./: .gitignore  AGENTS.md  README.md  justfile  mkdocs.yml  pyproject.toml  requirements-new.txt  tox.ini
.github/workflows/: deploy-docs.yml  deploy-pypi.yml  lint.yml  publish.yml  tests.yml  tox-tests.yml
docs/: Makefile  api.md  archivey.html  conf.py  developer_guide.md  developers.md  generate_api_docs.sh  index.html  index.md  index.rst  make.bat  reader_specifics.md  search.js  user_guide.md
docs/api/: archive_stream.rst  archivey.html  base_reader.rst  exceptions.rst  formats.rst  modules.rst  rar_reader.rst  search.js  sevenzip_reader.rst  single_file_reader.rst  tar_reader.rst  types.rst  zip_reader.rst
docs/archivey/: base_reader.html  cli.html  config.html  core.html  dependency_checker.html  exceptions.html  folder_reader.html  formats.html  index.html  io_helpers.html  iso_reader.html  rar_reader.html  sevenzip_reader.html  single_file_reader.html  tar_reader.html  types.html  utils.html  zip_reader.html
performance/: base.py  test_archives.py  test_random_access.py
scripts/: check_api_doc.py  griffe_extensions.py
src/archivey/: __init__.py  __main__.py  ar_reader.py  archive_path.py  archive_reader.py  archive_stream.py  base_reader.py  base_writer.py  cli.py  compressed_reader.py  compressed_streams.py  config.py  core.py  dependency_checker.py  exceptions.py  extraction_helper.py  filters.py  folder_reader.py  formats.py  io_helpers.py  io_wrappers.py  iso_reader.py  libarchive_reader.py  libarchive_reader.py.disabled  rar_reader.py  reader_registry.py  registry.py  sevenzip_reader.py  single_file_reader.py  tar_reader.py  tar_writer.py  types.py  unique_ids.py  utils.py  zip_reader.py  zip_writer.py
src/archivey/api/: __init__.py  archive_reader.py  config.py  core.py  exceptions.py  filters.py  types.py
src/archivey/config/: __init__.py  settings.py
src/archivey/core/: __init__.py  main.py  reader.py
src/archivey/exceptions/: __init__.py  all.py
src/archivey/filters/: __init__.py  standard.py
src/archivey/formats/: __init__.py  brotli.py  compressed_streams.py  decompressors.py  folder_reader.py  format_detection.py  libarchive_reader.py  rar_reader.py  registry.py  sevenzip_reader.py  single_file_reader.py  tar_reader.py  zip_reader.py
src/archivey/formats/stream_handlers/: brotli.py  bzip2.py  gzip.py  lz4.py  unix_compress.py  xz.py  zlib.py  zstd.py
src/archivey/formats_lib/: __init__.py  compressed_streams.py  folder_reader.py  rar_reader.py  sevenzip_reader.py  tar_reader.py
src/archivey/internal/: __init__.py  archive_stream.py  base_reader.py  cli.py  dependency_checker.py  extraction_helper.py  io_helpers.py  utils.py
src/archivey/readers/: base_reader.py
src/archivey/types/: __init__.py  aliases.py  data_classes.py  enums.py
src/indexed_bzip2/: __init__.py
src/rapidgzip/: __init__.py
src/streamadapt/: README.md  __init__.py  core.py  errors.py  types.py  wrappers.py
stubs/: zlib.pyi
tests/: conftest.py  create_archives.py  create_corrupted_archives.py
tests/archivey/: conftest.py  create_archives.py  sample_archives.py  test_additional_features.py  test_archive.py  test_archive_path.py  test_cli.py  test_corrupted_archives.py  test_edge_cases.py  test_encrypted_archives.py  test_extractall.py  test_extraction.py  test_extraction_helper.py  test_features.py  test_filters.py  test_fixture_integration.py  test_folder_reader.py  test_formats.py  test_input_stream_buffering.py  test_io.py  test_io_helpers.py  test_io_helpers_extra.py  test_members.py  test_missing_packages.py  test_nested_compressed_archives.py  test_nonseekable_stream.py  test_open_compressed_stream.py  test_open_compressed_stream_nonseekable.py  test_open_http.py  test_open_in_memory.py  test_open_member.py  test_open_nonseekable.py  test_open_over_http.py  test_open_url.py  test_path_traversal.py  test_programming_errors.py  test_rar_reader.py  test_read_archives.py  test_reader_registry.py  test_reading.py  (+15 more)
tests/archivey/extract/: test_extractall.py
tests/archivey/io/: test_io_helpers.py  test_statsio.py
tests/archivey/readers/: test_nested_compressed_archives.py  test_open_compressed_stream.py  test_open_nonseekable.py  test_open_url.py  test_streaming_modes.py
tests/streamadapt/: test_core.py
tests/test_archives/: basic.rar  basic.tar  basic.tar.bz2  basic.tar.xz  basic_7zcmd.7z  basic_nonsolid__.rar  basic_nonsolid__7zcmd.7z  basic_nonsolid__genisoimage.iso  basic_nonsolid__py7zr.7z  basic_nonsolid__pycdlib.iso  basic_nonsolid__rar4.rar  basic_py7zr.7z  basic_solid.rar  basic_solid_7zcmd.7z  basic_solid__.rar  basic_solid__.tar.bz2  basic_solid__.tar.lz4  basic_solid__.tar.xz  basic_solid__7zcmd.7z  basic_solid__py7zr.7z  basic_solid__rar4.rar  basic_solid__tarcmd.tar  basic_solid__tarcmd.tar.zst  basic_solid__tarfile.tar  basic_solid_py7zr.7z  basic_tar.tar  basic_tar_bz2.tar.bz2  basic_tar_xz.tar.xz  comment.rar  comment_7zcmd.7z  comment__.rar  comment__rar4.rar  comment_py7zr.7z  comment_solid.rar  comment_solid_7zcmd.7z  comment_solid_py7zr.7z  dummy.7z  dummy.rar  duplicate_files__.rar  duplicate_files__.tar.bz2  (+123 more)
