[project]
name = "archivey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "davi davi", email = "gh@davitf.com" }
]
requires-python = ">=3.10"
dependencies = [
    "backports-strenum>=1.3.1 ; python_full_version < '3.11'",
    "tqdm>=4.67.1",
]

[project.scripts]
archivey = "archivey.cli:main"

[project.optional-dependencies]
optional = [
    "cryptography>=45.0.3",
    "lz4>=4.4.4",
    "py7zr>=1.0.0",
    "rarfile>=4.2",
    "zstandard>=0.23.0",
    "pycdlib>=1.14.0",
    "rapidgzip>=0.14.3",
    "indexed_bzip2>=1.6.0",
    "python-xz>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "hatch>=1.14.1",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "ruff>=0.11.11",
    "tox>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "--log-level=DEBUG"
timeout = 5
timeout_method = "thread"

[tool.hatch.envs.default]
python = "3.13"

[tool.hatch.envs.default.scripts]
lint = "ruff check --fix . && ruff format . && npx pyright ."
test = "pytest"

[tool.ruff]
target-version = "py310"
lint.extend-select = ["I"]  # sort imports
