[project]
name = "archivey"
version = "0.1.0"
description = "Unified interface for reading ZIP, TAR, RAR, 7z and other archives"
readme = "README.md"
authors = [
    { name = "Davi Figueiredo", email = "gh@davitf.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "backports-strenum>=1.3.1 ; python_full_version < '3.11'",
    "tqdm>=4.67.1",
]

[project.scripts]
archivey = "archivey.__main__:main"

[project.optional-dependencies]
optional = [
    "cryptography>=45.0.3",
    "lz4>=4.4.4",
    "py7zr>=1.0.0",
    "rarfile>=4.2",
    "zstandard>=0.23.0",
    "pycdlib>=1.14.0",
    "rapidgzip==0.14.3",
    "indexed_bzip2>=1.6.0",
    "python-xz>=0.5.0",
    "pyzstd>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "hatch>=1.14.1",
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.11",
    "tox>=4.0.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-autorefs>=1.0.1",
    "pytest-parallel>=0.1.1",
    # Required to make pytest-parallel work with current pytest version, see
    # https://github.com/kevlened/pytest-parallel/issues/118
    "py>=1.11.0",
    "mkdocs>=1.5.3",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "--log-level=DEBUG --cov=archivey --cov-report=term-missing"
timeout = 15
timeout_method = "thread"
log_format = "%(asctime)s %(levelname)s %(threadName)s %(name)s:%(filename)s:%(lineno)d %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.hatch.envs.default]
python = "3.13"
dependencies = [
    "devtools>=0.12.2",
    "hatch>=1.14.1", # Hatch itself as a dep for the env, usually fine
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.11",
    "tox>=4.0.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-autorefs>=1.0.1",
]
features = ["optional"]

[tool.hatch.envs.default.scripts]
lint = "ruff check --fix . && ruff format . && npx pyright ."
test = "uv run pytest --workers auto {args}"
docs = "sh docs/generate_api_docs.sh"
pyrefly = "uvx pyrefly check"

[tool.ruff]
target-version = "py310"
lint.extend-select = [
    "I",        # sort imports
    "F",        # Pyflakes rules
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
#    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
#    "PTH",      # Use pathlib instead of os.path
#    "A",   # detect shadowed builtins
    "BLE", # disallow catch-all exceptions
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "except ImportError",
    "pass",
]

[tool.hatch.version]
path = "src/archivey/__init__.py"

[tool.pyrefly]
search-path = ["src"]
project-includes = ["src"]
project-excludes = []
site-package-path = [".venv/lib/python3.13/site-packages"]
